# llm

./: .gitignore  notes.md
01-agentic-rag/: agent.ipynb  exercise.ipynb  faq.db  modified_rag_helper.py  notebook.ipynb  notes.md  out  persistent_rag.ipynb  pyproject.toml  rag_cleaned.ipynb  sqlite-ingest.ipynb
02-vector-search/: .gitignore  README.md  ingest.py  pyproject.toml  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
03-orchestration/: Exercise.md  README.md
03-orchestration/flows/: 3_rag_with_websearch.yaml
04-evaluation/: 01-data-gen.ipynb  README.md  evaluation_utils.py  pyproject.toml  rag_helper.py
vector-search/: .gitignore  exercise.ipynb  pyproject.toml
