[project]
name = "01-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.4.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.0",
    "toyaikit>=0.0.11",
]
